syntax = "proto3";

package policyadmin;

option go_package = "givc/modules/api/policyadmin";

message StreamPolicyRequest {
    string policy_name = 1;
    bytes policy_chunk = 2;
}

message Status {
    string Status = 1;
}

service PolicyAdmin {
    rpc StreamPolicy(stream StreamPolicyRequest) returns (Status);
}
